GUI Issues under Debian PPC64 #31063

Closed
opened 2012-04-22 17:57:21 +02:00 by Logan Brown · 10 comments

%%%I recently built Blender from svn since there is no pre-compiled version for PPC linux machines. Everything compiled without errors.

The UI seems to be offset vertically in the window, so the top UI elements are hidden past the top border of the window. The mouse is also effected - in the screenshot I've attached, you can see that blender is registering the mouse as being over a button, despite being approximately an inch below it.

As far as I can tell, everything runs properly. I'm able to open a file, move things around the 3d area, and render frames. I just have to work within the broken UI.%%%

%%%I recently built Blender from svn since there is no pre-compiled version for PPC linux machines. Everything compiled without errors. The UI seems to be offset vertically in the window, so the top UI elements are hidden past the top border of the window. The mouse is also effected - in the screenshot I've attached, you can see that blender is registering the mouse as being over a button, despite being approximately an inch below it. As far as I can tell, everything runs properly. I'm able to open a file, move things around the 3d area, and render frames. I just have to work within the broken UI.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The icons also have colors flipped, so given that this is ppc it looks like an endian problem. I can't immediately see a bug in the code, and ppc on OS X still seems to be working. So probably the next step would be for a developer to actually try to test it on a linux ppc installation.

Which build system did you use, cmake or scons?%%%

%%%The icons also have colors flipped, so given that this is ppc it looks like an endian problem. I can't immediately see a bug in the code, and ppc on OS X still seems to be working. So probably the next step would be for a developer to actually try to test it on a linux ppc installation. Which build system did you use, cmake or scons?%%%
Author

%%%I used scons, but I'm going to run a compile with cmake to see if that makes a difference.
%%%

%%%I used scons, but I'm going to run a compile with cmake to see if that makes a difference. %%%
Author

%%%I rebuilt with CMake to no avail. The same exact glitch occurs.%%%

%%%I rebuilt with CMake to no avail. The same exact glitch occurs.%%%

%%%Unfortunately, seems we don't have a developer who've got PPC64 system on which he could install linux. And such an issue is almost impossible to solve without having access to system which gives errors -- there're just too many possibilities where error originally came from.

I've tried installing Debian PPC64 on different VM like VBox, QEMU, kvm and so and didn't have luck running it there -- virtual system just hangs before installer even starts working.

Added to our TODO list, hopefully we'll finally find a develoepr who's able to reproduce the issue and fix it: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Install-OS#Linux

Thanks for the report, but marking it as a TODO.%%%

%%%Unfortunately, seems we don't have a developer who've got PPC64 system on which he could install linux. And such an issue is almost impossible to solve without having access to system which gives errors -- there're just too many possibilities where error originally came from. I've tried installing Debian PPC64 on different VM like VBox, QEMU, kvm and so and didn't have luck running it there -- virtual system just hangs before installer even starts working. Added to our TODO list, hopefully we'll finally find a develoepr who's able to reproduce the issue and fix it: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Install-OS#Linux Thanks for the report, but marking it as a TODO.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that I built with PPC32bit recently and didn't notice any problems with window/icon drawing. Possible this is a problem with the OpenGL driver.

Note that I built with PPC32bit recently and didn't notice any problems with window/icon drawing. Possible this is a problem with the OpenGL driver.

This issue was referenced by c282373116

This issue was referenced by c282373116f5e5e565ab45e23d3d4b26e96a44af

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31063
No description provided.