Fix T31063: X11 window resize fails on PPC

X11 property access was using wrong sized types that only worked for little endian systems.